// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a comment when there are diffs 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`foo\` | bar | baz |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;

exports[`should display a link to the product settings if a projectSlug is provided 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions. [Click here](https://locize.app/p/42od1i754u/settings) to go to your project settings to publish your changes.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`foo\` | bar | baz |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;

exports[`should display diffs for each language/namespace 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions.

### \`en-US/common\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`en\` | common | not common |

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`foo\` | bar | baz |
| \`hi\` | ho | howdy |

### \`zh-CN/ns\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`a\` | abc | 123 |
| \`b\` | 123 | abc |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;

exports[`should update the existing comment if it exists 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`foo\` | bar | baz |
| \`hi\` | ho | howdy |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;
